<resources>
    <string name="app_name">EconoFuel</string>
    <string name="buscar">Buscar</string>
    <string name="km_l">km/l</string>
    <string name="r">R$</string>
    <string name="consumo_combust_vel_1">Consumo Combustível 1</string>
    <string name="consumo_combust_vel_2">Consumo Combustível 2</string>
    <string name="valor_litro_combust_vel_1">Valor Litro Combustível 1</string>
    <string name="valor_litro_combust_vel_2">Valor Litro Combustível 2</string>
    <string name="comparar">COMPARAR</string>
    <string name="economia1">Sua economia será maior utilizando o COMBUSTÍVEL 1</string>
    <string name="economia2">Sua economia será maior utilizando o COMBUSTÍVEL 2</string>
    <string name="consumo_de_combust_veis">CONSUMO DE COMBUSTÍVEIS</string>
    <string name="insira_um_valor">Insira um valor</string>
    <string name="econofuel">EconoFuel</string>
    <string name="o_seu_app_de_economia_de_combust_vel">O seu app de economia de combustível</string>
    <string name="bomba_de_combust_vel">Bomba de combustível</string>
    <string name="m_o_com_dinheiro">Mão com dinheiro</string>
</resources>